RESOLVED FIXED212867
[LFC] FormattingContext::Geometry::computedValue should not try to resolve values when layout is required
https://bugs.webkit.org/show_bug.cgi?id=212867
Summary [LFC] FormattingContext::Geometry::computedValue should not try to resolve va...
alan
Reported 2020-06-06 07:21:05 PDT
In general, the computed value resolves the specified value as far as possible without laying out the content.
Attachments
Patch (12.65 KB, patch)
2020-06-06 07:23 PDT, alan
no flags
alan
Comment 1 2020-06-06 07:23:05 PDT
EWS
Comment 2 2020-06-06 08:02:52 PDT
Committed r262679: <https://trac.webkit.org/changeset/262679> All reviewed patches have been landed. Closing bug and clearing flags on attachment 401256 [details].
Radar WebKit Bug Importer
Comment 3 2020-06-06 08:03:19 PDT
Note You need to log in before you can comment on or make changes to this bug.